Fixed modal z-index

--- a/src/sections/speakers/styles.scss
+++ b/src/sections/speakers/styles.scss
@@ -52,5 +52,4 @@
   flex-wrap: wrap;
   align-items: stretch;
   position: relative;
-  z-index: 1;
 }
